[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name = "lleiria-"}, 
  {email = "lleiria-@student.42lisboa.com" },
]
description = "A small package with this module functions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = {text = "MIT"}

[project.urls]
"Home-page" = "https://github.com/lleiria-/ft_package"